--- a/src/Forms/Solutions/NgMessages/pages/detail.html
+++ b/src/Forms/Solutions/NgMessages/pages/detail.html
@@ -64,9 +64,11 @@
                     This product is stil active
                 </label>
                 </div>
-                <button type="submit" class="btn btn-primary pull-right" ng-submit ng-click="save()" ng-disabled="EditProducts.$submitted && EditProducts.$invalid">Submit</button>
-                <button type="submit" class="btn btn-danger" ng-click="delete()" ng-disabled="!isUpdating">Delete</button>
-                 <button type="submit" class="btn btn-default" ng-click="go('/')">Cancel</button>
+                <div class="btn-container">
+                    <button type="button" class="btn btn-danger pull-right" ng-click="delete()" ng-disabled="!isUpdating">Delete</button>
+                    <button type="submit" adp-button="primary" ng-submit ng-disabled="EditProducts.$submitted && EditProducts.$invalid" ng-click="save()">Submit</button>
+                    <button type="button" adp-button="secondary" ng-click="go('/')">Cancel</button>
+                </div>
             </form>
         </div>
     </div>
